<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bgimg6">
<!--    <TextView-->
<!--        android:id="@+id/batterylevel1"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text=""-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="20sp"-->
<!--        android:textStyle="bold"-->
<!--        />-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:gravity="center"
        android:orientation="vertical">



        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:theme="@style/Theme.AppCompat.DayNight"
            app:cardCornerRadius="25dp"
            app:cardElevation="80dp"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="#2196F3"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/u_name"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:autofillHints="123"
                    android:inputType="text" />
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:drawableStart="@drawable/ic_baseline_password_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/pass"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:autofillHints="123"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:cornerRadius="20dp"
                    android:backgroundTint="#5065DF"
                    android:elevation="2dp"
                    android:translationZ="2dp"
                    android:theme="@style/Theme.AppCompat.DayNight"/>





            </LinearLayout>
        </androidx.cardview.widget.CardView>




    </LinearLayout>
</RelativeLayout>